--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@types/node": "^12.19.14",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "draft-js": "^0.11.7",
     "jodit-react": "^1.0.70",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-player": "^2.7.2",
+    "react-player": "^2.8.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/draft-js": "^0.10.44"
   }
 }
