--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "Dante2": "^0.5.0-rc4",
+    "antd": "^4.10.3",
+    "draft-js": "^0.11.7",
+    "firebase": "^8.2.3",
     "jodit-react": "^1.0.70",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/draft-js": "^0.10.44",
     "react-summernote": "^2.0.2"
   }
 }
