--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/node": "^12.19.14",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "antd": "^4.10.3",
     "draft-js": "^0.11.7",
+    "firebase": "^8.2.3",
     "jodit-react": "^1.0.70",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-player": "^2.8.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/draft-js": "^0.10.44"
+    "@types/draft-js": "^0.10.44",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
