--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
     "@types/node": "^12.19.14",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
-<<<<<<< HEAD
-=======
-    "Dante2": "^0.5.0-rc4",
->>>>>>> origin/master
     "antd": "^4.10.3",
     "draft-js": "^0.11.7",
     "firebase": "^8.2.3",
+    "firestore": "^1.1.6",
     "jodit-react": "^1.0.70",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -54,10 +51,7 @@
   },
   "devDependencies": {
     "@types/draft-js": "^0.10.44",
-<<<<<<< HEAD
-    "@types/react-router-dom": "^5.1.7"
-=======
+    "@types/react-router-dom": "^5.1.7",
     "react-summernote": "^2.0.2"
->>>>>>> origin/master
   }
 }
