--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "@tinymce/tinymce-react": "^3.9.0",
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.14",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "antd": "^4.10.3",
+    "classnames": "^2.2.6",
     "draft-js": "^0.11.7",
     "firebase": "^8.2.3",
     "firestore": "^1.1.6",
     "jodit-react": "^1.0.70",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-player": "^2.8.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "tinymce": "^5.6.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
