--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.4.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "@tinymce/tinymce-react": "^3.9.0",
+    "@toast-ui/react-image-editor": "^1.3.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.14",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "antd": "^4.10.3",
+    "capture-video-frame": "^1.0.0",
     "draft-js": "^0.11.7",
     "firebase": "^8.2.3",
     "firestore": "^1.1.6",
+    "html2canvas": "^1.0.0-rc.7",
     "jodit-react": "^1.0.70",
     "react": "^17.0.1",
+    "react-canvas-draw": "^1.1.1",
     "react-dom": "^17.0.1",
     "react-player": "^2.8.1",
     "react-router-dom": "^5.2.0",
