--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.14",
     "@types/react": "^16.14.2",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.10",
+    "@types/uuid": "^8.3.0",
     "antd": "^4.10.3",
     "capture-video-frame": "^1.0.0",
     "draft-js": "^0.11.7",
@@ -22,12 +24,14 @@
     "jodit-react": "^1.0.70",
     "react": "^17.0.1",
     "react-canvas-draw": "^1.1.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-player": "^2.8.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "tinymce": "^5.6.2",
     "typescript": "^4.1.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
