--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.14.2",
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "^7.1.16",
     "@types/uuid": "^8.3.0",
     "antd": "^4.10.3",
     "capture-video-frame": "^1.0.0",
@@ -30,6 +31,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-player": "^2.8.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "tinymce": "^5.6.2",
