--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "tinymce": "^5.6.2",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2",
