--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "video-learning-platform",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://euicheon.github.io/music-project",
   "dependencies": {
     "@ant-design/icons": "^4.4.0",
     "@material-ui/core": "^4.11.3",
@@ -45,7 +46,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -69,6 +72,7 @@
     "@types/classnames": "^2.2.11",
     "@types/draft-js": "^0.10.44",
     "@types/react-router-dom": "^5.1.7",
+    "gh-pages": "^3.1.0",
     "react-summernote": "^2.0.2"
   }
 }
