--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.14",
     "@types/react": "^16.14.2",
+    "@types/react-bootstrap": "^0.32.26",
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.10",
     "@types/react-redux": "^7.1.16",
@@ -37,7 +38,7 @@
     "react-scripts": "^4.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "tinymce": "^5.6.2",
+    "tinymce": "^5.8.2",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
