--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@ant-design/icons": "^4.4.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@react-three/drei": "^7.5.0",
+    "@react-three/fiber": "^7.0.6",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
@@ -36,8 +38,10 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-three-fiber": "^6.0.13",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "three": "^0.131.3",
     "tinymce": "^5.8.2",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2",
@@ -73,6 +77,7 @@
     "@types/classnames": "^2.2.11",
     "@types/draft-js": "^0.10.44",
     "@types/react-router-dom": "^5.1.7",
+    "@types/three": "^0.131.0",
     "gh-pages": "^3.2.3",
     "react-summernote": "^2.0.2"
   }
